--- a/css/style.scss
+++ b/css/style.scss
@@ -79,9 +79,8 @@ body {
             height: 100%;
             width: 100%;
             filter: blur(3px);
-            -webkit-filter: blur(8px);
-
-            background-image: url("../images/mainPic.jpg");
+            -webkit-filter: blur(4px);
+            background-image: url("../images/mainPic.webp");
         }
         
         .menu {
